# SketchNet

./: README.md  convert_to_onnx.py  dataset.py  download_dataset.py  inference.py  model.py  pyproject.toml  requirements.txt  train.py
checkpoints/: label_map_50.json
